# excel-mcp

./: CLAUDE.md  pyproject.toml
src/excel_mcp_server/: config.py  server.py
src/excel_mcp_server/utils/: __init__.py  sandbox.py  validators.py
